Fix: Resolve an error about calling info api

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_GET_IMAGE=https://storage.redbrickmakers.com
+REACT_APP_GET_IMAGE=https://storage-dev.redbrickmakers.com
+REACT_APP_API_SERVER=https://dev-api.redbrickmakers.com/
