--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_GET_IMAGE=https://storage-dev.redbrickmakers.com
 REACT_APP_API_SERVER=https://dev-api.redbrickmakers.com/
+REACT_APP_API_SAAS_SERVER=https://dev-api.redbrickmakers.com/
