--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "rehype-parse": "^9.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-react": "^8.0.0",
     "sass": "^1.69.7",
+    "unified": "^11.0.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
