--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "rehype-document": "^7.0.3",
+    "rehype-format": "^5.0.0",
     "rehype-parse": "^9.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-stringify": "^11.0.0",
     "sass": "^1.69.7",
     "unified": "^11.0.4",
+    "vfile-reporter": "^8.1.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
